<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.matmercer.android.calculator.CalculatorActivity">

    <LinearLayout
        android:id="@+id/calc_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/calc_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:capitalize="characters"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:defaultFocusHighlightEnabled="false"
            android:editable="false"
            android:text="TextView" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="4"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="102dp">

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_ce"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_square"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_division"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_delete"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_7"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_8"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_9"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_times"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_6"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_minus"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_plus"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_dot"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_negate"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

        <Button android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_equals"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill" />

    </GridLayout>


</android.support.constraint.ConstraintLayout>
